temp fix for timer button

--- a/src/app/timer/timer/timer.component.html
+++ b/src/app/timer/timer/timer.component.html
@@ -1,7 +1,8 @@
-<div class="playpause">
+<!-- <div class="playpause">
     <input (click)="tooglerTimer()" type="checkbox" value="None" id="playpause" name="check" checked/>
     <label for="playpause" tabindex=1></label>
-</div>
+</div> -->
+<button (click)="tooglerTimer()">{{ textBtn }}</button>
 <p>{{display}}</p>
 
 
