add to do list component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
   <content>
     <nav>
     </nav>
-    <app-timer [time]="5"></app-timer>
+    <app-to-do-list></app-to-do-list>
     <router-outlet></router-outlet>
   </content>
   <footer>
