changes todo list

--- a/src/app/to-do-list/to-do-list/to-do-list.component.scss
+++ b/src/app/to-do-list/to-do-list/to-do-list.component.scss
@@ -1,7 +1,12 @@
 table {
-    width: 100%;
-  }
+  width: 500px;
+  margin-top: 25px;
+}
 
-  .addTaskButton {
-    margin-right: 25px;
-  }
+.addTaskButton {
+  margin-right: 25px;
+}
+
+.action-container {
+  display: flex;
+}
