--- a/src/app/to-do-list/to-do-list/to-do-list.component.html
+++ b/src/app/to-do-list/to-do-list/to-do-list.component.html
@@ -1,14 +1,4 @@
-<div class="demo-button-container">
-    <button mat-raised-button (click)="addTask(newTask)" class="demo-button" [disabled]="newTask.value === ''">
-        Add task
-    </button>
-    <form class="example-form" (keydown.enter)="onSubmit($event, newTask)">
-        <mat-form-field class="example-full-width" appearance="fill">
-            <mat-label>New Task</mat-label>
-            <input matInput placeholder="Ex. Check Pizza" #newTask />
-        </mat-form-field>
-    </form>
-</div>
+<app-task-form (newTask)="addTask($event)"></app-task-form>
 
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 demo-table">
     <!-- Position Column -->
@@ -27,14 +17,15 @@
     <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef>Action</th>
         <td mat-cell *matCellDef="let element">
-            <app-timer [time]="5"></app-timer>
-            <button mat-raised-button [disabled]="!dataSource.length" (click)="removeTask(element)" mat-mini-fab
-                color="primary">
-                <mat-icon>{{deleteIcon}}</mat-icon>
-            </button>
+            <div class="action-container">
+                <app-timer [time]="30" class></app-timer>
+                <button mat-raised-button [disabled]="!dataSource.length" (click)="removeTask(element)" mat-mini-fab
+                    color="primary">
+                    <mat-icon>{{deleteIcon}}</mat-icon>
+                </button>
+            </div>
         </td>
     </ng-container>
-
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
