add service todo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,11 +11,8 @@
 <body>
   <header>
   </header>
-  <content>
-    <nav>
-    </nav>
+  <content class="content">
     <app-to-do-list></app-to-do-list>
-    <router-outlet></router-outlet>
   </content>
   <footer>
   </footer>
