fix buttons table

--- a/src/app/timer/timer/timer.component.html
+++ b/src/app/timer/timer/timer.component.html
@@ -2,11 +2,11 @@
     <input (click)="tooglerTimer()" type="checkbox" value="None" id="playpause" name="check" checked/>
     <label for="playpause" tabindex=1></label>
 </div> -->
-<div *ngIf="showPlayPause">
+<div *ngIf="showPlayPause" class="timer-container">
     <button (click)="tooglerTimer()" mat-mini-fab color="primary">
         <mat-icon>{{iconBtn}}</mat-icon>
     </button>
-    <span>{{display}}</span>
+    <span style="padding-right: 20px;">{{display}}</span>
 </div>
 
 <!-- <svg width="50" height="50" viewbox="0 0 250 250">
