--- a/src/app/timer/timer/timer.component.html
+++ b/src/app/timer/timer/timer.component.html
@@ -1,12 +1,9 @@
-<!-- <div class="playpause">
-    <input (click)="tooglerTimer()" type="checkbox" value="None" id="playpause" name="check" checked/>
-    <label for="playpause" tabindex=1></label>
-</div> -->
 <div *ngIf="showPlayPause" class="timer-container">
     <button (click)="tooglerTimer()" mat-mini-fab color="primary">
         <mat-icon>{{iconBtn}}</mat-icon>
     </button>
-    <span style="padding-right: 20px;">{{display}}</span>
+    <span style="padding-right: 20px;" *ngIf="time">{{time | timeMinutes}}</span>
+    <span style="padding-right: 20px;" *ngIf="!time">{{endTimeMessage}}</span>
 </div>
 
 <!-- <svg width="50" height="50" viewbox="0 0 250 250">
