--- a/src/app/timer/timer/timer.component.html
+++ b/src/app/timer/timer/timer.component.html
@@ -3,10 +3,7 @@
         <mat-icon>{{iconBtn}}</mat-icon>
     </button>
     <span style="padding-right: 20px;" *ngIf="time">{{time | timeMinutes}}</span>
+    <!-- <app-svg-icon [time]="time"></app-svg-icon> -->
     <span style="padding-right: 20px;" *ngIf="!time">{{endTimeMessage}}</span>
-</div>
 
-<!-- <svg width="50" height="50" viewbox="0 0 250 250">
-    <path #border id="border" transform="translate(125, 125)" />
-    <path #loader id="loader" transform="translate(125, 125) scale(.84)" />
-</svg> -->
+</div>
